# alg

./: CMakeLists.txt  build.sh  fosapi.c  main.c
cmake/: aarch64-linux-gnu-gcc.cmake  arm-linux-gnueabihf.cmake
code/: CMakeLists.txt
code/api/: CMakeLists.txt
code/api/src/: hal_api.c
code/include/: errcode.h  hal_api.h
code/version/: CMakeLists.txt
code/version/include/: version.h
code/version/src/: version.c
command/: CMakeLists.txt  ReadMe.md
command/include/: command.h
command/src/: command.c  command_exec.c  command_exec.h  command_tree.c  command_tree.h
doc/: Doxyfile  ReadMe.md  genfile.sh  命令行设计说明书.md  日志系统设计说明书.md  设计说明书.md
infra/: CMakeLists.txt  ReadMe.md
infra/stack/: CMakeLists.txt
infra/stack/include/: stack.h
infra/stack/src/: stack.c
infra/tool/: CMakeLists.txt
infra/tool/include/: tool.h
infra/tool/src/: tool.c
log/: CMakeLists.txt  ReadMe.md
log/include/: log.h
log/src/: log.c
test/: CMakeLists.txt  ReadMe.md
test/common/: main.c  main.cpp
test/testcase/infra/: infra_test.cpp
